Added cell selection logic.

--- a/sudoku.html
+++ b/sudoku.html
@@ -22,7 +22,7 @@
                       'sudoku-border-bottom' :
                       '';
                 %>
-                    <td class="sudoku-cell  <%= rightBorderClass %>  <%= bottomBorderClass %>"
+                    <td class="sudoku-cell  js-sudoku-cell <%= rightBorderClass %>  <%= bottomBorderClass %>"
                         data-row="<%= rowIndex %>"
                         data-column="<%= cellIndex %>">
                         <%= typeof cell === 'number' ? cell : '-' %>
